---------------------------------------------------------------------------------------------------
Version: 3.0.2
Date: idk
  Changes:
    - Fixed coalbed recipes requiring 500 degree pressurized water
---------------------------------------------------------------------------------------------------
Version: 3.0.1
Date: 2024-10-21
  Changes:
    - fixed fertilizer internal name to match pyalienlife
---------------------------------------------------------------------------------------------------
Version: 3.0.0
Date: 2024-10-20
  Changes:
    - changed tholin capsule stack size to 500
---------------------------------------------------------------------------------------------------
Version: 2.1.16
Date: 2024-6-3
  Changes:
    - Added circuit connectivity to Sulfur Mine (credit: JStMorgan)
---------------------------------------------------------------------------------------------------
Version: 2.1.15
Date: 2024-3-24
  Changes:
    - Fixed thickener mk01 had a double recipe icons showing in tech tree
    - Fixed some resources couldnt be disabled in map setup screen
---------------------------------------------------------------------------------------------------
Version: 2.1.14
Date: 2024-3-13
  Changes:
    - Fixed niobium and molybdenum plate have a hot air recipe and use productivity modules. removed hot air recipe
---------------------------------------------------------------------------------------------------
Version: 2.1.13
Date: 2024-1-19
  Changes:
    - Fixed sulfur processing tech unlocking the gas processing unit twice (https://github.com/pyanodon/pybugreports/issues/366)
    - Added post-game (space science) tholins recipe to obtain small amounts of tritium without fusion.
    - Fixed a crash when throwing a grenade at a bitumen seep
---------------------------------------------------------------------------------------------------
Version: 2.1.12
Date: 2024-1-8
  Changes: