@@ -9,4 +9,6 @@ FLUID {
     heat_capacity = "1kJ",
     base_color = {r = 255, g = 0, b = 0},
     flow_color = {r = 1, g = 1, b = 1},
+    subgroup = "py-petroleum-handling-fluids",
+    order = "c"
 }
