@@ -2,7 +2,8 @@
 Version: 3.0.2
 Date: idk
   Changes:
-    - Fixed coalbed recipes requiring 500 degree pressurized water
+    - Fixed coalbed recipes requiring 500 degree pressurized water.
+    - Fixed some fluids not having subgroups.
 ---------------------------------------------------------------------------------------------------
 Version: 3.0.1
 Date: 2024-10-21
